<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewQuestions">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/op1"
                style="@style/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/op2"
                app:layout_constraintEnd_toEndOf="@+id/ques"
                app:layout_constraintStart_toStartOf="@+id/ques"
                app:layout_constraintTop_toBottomOf="@+id/ques" />

            <TextView
                android:id="@+id/ques"
                style="@style/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="Quesion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/op2"
                style="@style/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/op3"
                app:layout_constraintEnd_toEndOf="@+id/op1"
                app:layout_constraintStart_toStartOf="@+id/op1"
                app:layout_constraintTop_toBottomOf="@+id/op1" />

            <TextView
                android:id="@+id/op3"
                style="@style/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/op4"
                app:layout_constraintEnd_toEndOf="@+id/op2"
                app:layout_constraintStart_toStartOf="@+id/op2"
                app:layout_constraintTop_toBottomOf="@+id/op2" />

            <TextView
                android:id="@+id/op4"
                style="@style/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/preview_next_btn"
                app:layout_constraintEnd_toEndOf="@+id/op3"
                app:layout_constraintStart_toStartOf="@+id/op3"
                app:layout_constraintTop_toBottomOf="@+id/op3" />

            <Button
                android:id="@+id/preview_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/preview_prev_btn"
                app:layout_constraintTop_toBottomOf="@+id/op4" />

            <Button
                android:id="@+id/preview_prev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="@+id/preview_next_btn"
                app:layout_constraintEnd_toStartOf="@+id/preview_next_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/preview_next_btn"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_next_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/qnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="1"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/question"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/qnum"
        app:layout_constraintEnd_toStartOf="@+id/qnum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/qnum" />
</androidx.constraintlayout.widget.ConstraintLayout>